rgbds-0.6.1/test/asm/string-formatting.err
error: string-formatting.asm(10):
    Formatting string with prefix flag '#'
error: Assembly aborted (1 error)!
